gcc/testsuite/rust/rustc/ui/borrowck/borrowck-while-cond.rs
fn main() {
    let x: bool;
    while x { } // { dg-error ".E0381." "" { target *-*-* } }
}

